Landing Page Logo Styled

--- a/Laced/templates/index.html
+++ b/Laced/templates/index.html
@@ -12,7 +12,7 @@
       <br/>
       <br/>
         <div id='main'>
-		<img src='static/hmpg_logo1.png' />
+		  <img src='static/lacedLogo_Offical.png' />
        <!-- <h1>Laced</h1> -->
 
         {% for message in get_flashed_messages() %}
@@ -29,7 +29,7 @@
          <br/>
             <!--<h2>I don't know you!</h2>-->
            <button style="position: absolute; left: 20%; right: 20%; bottom: 5%;" class='login' type="button"><a href="{{ url_for('oauth_authorize', provider='twitter') }}">Laced with Twitter</a></button>
-         <button style="position: absolute; left: 40%; right: 20%; bottom: 5%;" class='login' type="button"><a href="{{ url_for('oauth_authorize', provider='facebook') }}">Laced with Facebook</a></button>    
+         <button style="position: absolute; left: 50%; right: 20%; bottom: 5%;" class='login' type="button"><a href="{{ url_for('oauth_authorize', provider='facebook') }}">Laced with Facebook</a></button>    
         {% endif %}
         </div>
     </body>
