--- a/Laced/static/main.css
+++ b/Laced/static/main.css
@@ -38,10 +38,8 @@ body{
 }
 
 #main{
-	width: 50%;
-	padding: 50px;
-	margin: 50px auto;
-	text-align: center;
+	padding: 150px 50px;
+	margin: 0 auto;
 }
 
 button.paypal-button.large{
