--- a/Laced/templates/index.html
+++ b/Laced/templates/index.html
@@ -9,10 +9,8 @@
     </head>
     <body class='landing'> 
       <br/>
-      <br/>
-      <br/>
         <div id='main'>
-		  <img src='static/lacedLogo_Offical.png' />
+		  <img src='static/laced_logo.png' />
        <!-- <h1>Laced</h1> -->
 
         {% for message in get_flashed_messages() %}
