Home page data is printing
all data from database from shop and trade table is printing to home
screen --- still needs link to take to detail page and styling

--- a/Laced/templates/home.html
+++ b/Laced/templates/home.html
@@ -26,9 +26,18 @@
          <br />
          <br />
 
+            <h4>Shop</h4> <!--- temp heading just to show what db call is printing where -->
         {% for item in pagedata %}
          <div class="home">
-            {{item[0]}} - {{item[1]}}{{item[2]}} 
+            {{item[0]}} - {{item[1]}}{{item[2]}} <br/>
+
+             <!--<a href=/cart type="submit" value="add"> Add to cart</a> -->
+             <!--- shows the items in pagedata -->
+
+        {% endfor %}
+             <h4>Trades</h4> <!--- temp heading just to show what db call is printing where -->
+             {% for item in trade %}
+                {{item[0]}} - {{item[1]}}
 
              <!--<a href=/cart type="submit" value="add"> Add to cart</a> -->
              <!--- shows the items in pagedata -->
