back to closet button
added button to trade upload form so user can get off page for any
reason --- no style

--- a/Laced/templates/tradeuplaodform.html
+++ b/Laced/templates/tradeuplaodform.html
@@ -23,7 +23,7 @@
 
         <button>Upload</button>
 	</form>
-
+ <button class='trades'><a href="{{ url_for('closet') }}">back to closet</a></button>
     </body>
 </html>
 
