shop detail page
In app.py had to grab the id from the db, detail page for shop is
grabbing the right id but i have to change code so it displays the
actual item [added the select from store]. Gotta change db call to just
grab elements from that Id.

--- a/Laced/templates/shop.html
+++ b/Laced/templates/shop.html
@@ -40,12 +40,12 @@
         </select>
         <img id='shopicon' src='static/cart_icon.png' />
 
-        {% for item in pagedata %}
+         {% for item in pagedata %}
          <div class="shop">
-            {{item[0]}} - {{item[1]}}{{item[2]}} <a><script src="static/paypal-button.min.js?merchant=highfashionentertainment@gmail.com"
+           <a href="/shop/{{item[0]}}"> {{item[1]}} - {{item[2]}}{{item[3]}} </a> <a><script src="static/paypal-button.min.js?merchant=highfashionentertainment@gmail.com"
     data-button="buynow"
-    data-name="{{item[0]}}"
-    data-amount="{{item[1]}}"
+    data-name="{{item[1]}}"
+    data-amount="{{item[2]}}"
     async
 ></script></a>
 
