--- a/Laced/templates/trade.html
+++ b/Laced/templates/trade.html
@@ -22,7 +22,7 @@
         <!--- Adding Trade Images Here -->
         
            {% for item in pagedata %}
-            {{item[0]}}  {{item[1]}} {{item[2]}}
+           <a href='#'> {{item[1]}}  {{item[2]}} {{item[3]}} </a>
 
         {% endfor %}
 
