--- a/Laced/templates/detail.html
+++ b/Laced/templates/detail.html
@@ -25,7 +25,7 @@
 
                     {% for item in pagedata %}
         <div class="shop">
-            {{item[0]}} - {{item[1]}} <a href=/store/id > Delete</a>  <!--- shows the items in pagedata --><br>
+            {{item[0]}} - {{item[1]}} <!--- shows the items in pagedata --><br>
 
         {% endfor %}
          </div>
