--- a/Laced/templates/detail.html
+++ b/Laced/templates/detail.html
@@ -30,7 +30,7 @@
 
         {% endfor %}
          </div>
-                <button>Add To Cart</button>
+               <button><a href="{{ url_for('shop') }}">back</a></button>  <button>Add To Cart</button>
     </body>
 </html>
 
