--- a/Laced/templates/home.html
+++ b/Laced/templates/home.html
@@ -29,7 +29,7 @@
             <h4>Shop</h4> <!--- temp heading just to show what db call is printing where -->
         {% for item in pagedata %}
          <div class="home">
-            {{item[0]}} - {{item[1]}}{{item[2]}} <br/>
+            {{item[1]}}-{{item[2]}}  <button><a href="/shop/{{item[0]}}">View</a></button> <br/>
 
              <!--<a href=/cart type="submit" value="add"> Add to cart</a> -->
              <!--- shows the items in pagedata -->
