Removed Broken Mobile Nav
Gonna Go Back To Finishing The Backend then fix the basic stuff later

--- a/Laced/templates/home.html
+++ b/Laced/templates/home.html
@@ -11,23 +11,13 @@
     <body> 
       <header>
             <h1><img src='static/lacedlogo_1.png' /></h1> 
-            <div class="drop" id="toggle1"></div>
-  
-                <ul class="toggle1">
-                    <li class='nav'><a href="/home">Home</a></li>
-                    <li class='nav'><a href="/store">Shop</a></li>
-                    <li class='nav'><a href="/trade">Trade</a></li>
-                    <li class='nav'><a href="/closet">Closet</a></li>
-                </ul>
-          
-          <!--
             <nav>
                 <a href='/home'>Home</a>
                 <a href='/store'>Shop</a>
                 <a href='/trades'>Trade</a>
                 <a href='/closet'>Closet</a>
-                  <!---  <button><a href="{{ url_for('logout') }}">Logout</a></button>
-            </nav>-->
+                  <!---  <button><a href="{{ url_for('logout') }}">Logout</a></button>-->
+            </nav>
         </header>
 
      <fieldset>
