adding user data from database

--- a/Laced/templates/closet.html
+++ b/Laced/templates/closet.html
@@ -35,7 +35,7 @@
 		  	<!-- Profile Username and Status -->
 		  	<div class="row">
 		  		<div class="col center">
-	   				<h4 class='username'>Lyte </h4>
+	   				<h4 class='username'><!--Lyte --> {{current_user.nickname}}</h4>
 	   			</div>
 	   		</div>
             
