--- a/Laced/templates/detail.html
+++ b/Laced/templates/detail.html
@@ -30,6 +30,7 @@
                     <li>Size: {{item[4]}}</li>
                     <li>Price: {{item[2]}}</li>
                     <li>Description: {{item[5]}}</li>
+                <button><a href="http://twitter.com/share">Tweet</a></button>
                 </ul>  <!--- shows the items in pagedata --><br>
 
         {% endfor %}
