--- a/Laced/static/main.css
+++ b/Laced/static/main.css
@@ -268,6 +268,63 @@ div.row.count{
     background-color: #EEE8D4;
 }
 
+/*        TRADE
+===========================
+*/
+
+.photo-grid img {
+  width:100%;
+  margin:10px 10px 0 10px;
+  
+}
+.photo-grid {
+    margin: 35px 0 0 0;
+    padding: 0;
+    list-style: none;
+    position: relative;
+    width: 100%;
+}
+ 
+.photo-grid li {
+    position: relative;
+    float: left;
+    overflow: hidden;
+    width: 16.6666667%; /* Fallback */
+    width: -webkit-calc(100% / 6);
+    width: calc(100% / 6);
+}
+ 
+.photo-grid li a,
+.photo-grid li a img {
+    display: block;
+    width: 100%;
+    cursor: pointer;
+}
+ 
+.photo-grid li a img {
+    max-width: 100%;
+}
+ 
+
+.photo-grid li a ul {
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    right: 20px;
+    bottom: 20px;
+    background: rgba(71,163,218,0.2);
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: flex;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    text-align: center;
+    opacity: 0;
+}
+
 /*        MEDIA QUERIES
 ===========================
 */
@@ -308,4 +365,50 @@ div.row.count{
     background-size: contain;
 }   
  }
+
+@media screen and (max-width: 1190px) {
+.photo-grid li {
+    width: 20%; /* Fallback */
+    width: -webkit-calc(100% / 5);
+    width: calc(100% / 5);
+    }
+}
+ 
+@media screen and (max-width: 945px) {
+.photo-grid li {
+    width: 25%; /* Fallback */
+    width: -webkit-calc(100% / 4);
+    width: calc(100% / 4);
+    }
+}
+ 
+@media screen and (max-width: 660px) {
+.photo-grid li {
+    width: 33.3333333%; /* Fallback */
+    width: -webkit-calc(100% / 3);
+    width: calc(100% / 3);
+    }
+}
+ 
+@media screen and (max-width: 660px) {
+.photo-grid li {
+    width: 33.3333333%; /* Fallback */
+    width: -webkit-calc(100% / 3);
+    width: calc(100% / 3);
+    }
+}
+ 
+@media screen and (max-width: 400px) {
+.photo-grid li {
+    width: 50%; /* Fallback */
+    width: -webkit-calc(100% / 2);
+    width: calc(100% / 2);
+    }
+}
+ 
+@media screen and (max-width: 300px) {
+.photo-grid li {
+    width: 100%;
+    }
+}
 
