--- a/Laced/templates/closet.html
+++ b/Laced/templates/closet.html
@@ -92,16 +92,12 @@
 		  	<!-- CLOSET GALLERY 
 			=================================
 		  	-->
-		  	<div class="row">
-		  		<div class="col center">
-		  			<a href="#"><img src="static/4.jpg"></a>
-		  		</div>
-		  		<div class="col center">
-		  			<a href="#"><img src="static/2.jpg"></a>
-		  		</div>
-		  		<div class="col center">
-		  			<a href="#"><img src="static/3.jpg"></a>
-		  		</div>
+		  <div class="row">
+                 <ul class="photo-grid">
+                     <li><img src="static/4.jpg"></li>
+		  			<li><img src="static/2.jpg"></li>
+		  			<li><img src="static/3.jpg"></li>
+                </ul>
 		  	</div>
 		  	
 	  	</div> <!-- closet page -->
