--- a/Laced/templates/closet.html
+++ b/Laced/templates/closet.html
@@ -28,7 +28,7 @@
             <br/>
 		  	<div class="row">
 		  		<div class="col col-33 col-offset-33 center">
-		  			<img class="profile_pic" src="static/profile_pic.png">
+		  			<img class="profile_pic" src="static/profile_pic.png" width='200px'/>
 		  		</div>
 		  	</div> <!-- / row -->
 
