--- a/Laced/templates/index.html
+++ b/Laced/templates/index.html
@@ -2,14 +2,14 @@
     <head>
         <title>Laced</title>
         <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
-    <link rel='stylesheet' type='text/css' href='static/base.css'/>
-    <link rel='stylesheet' type='text/css' href='static/layout.css'/>
-    <link rel='stylesheet' type='text/css' href='static/skeleton.css'/>
-    <link rel='stylesheet' type='text/css' href='static/main.css'/>
+    <link rel='stylesheet' type='text/css' href='/static/css/base.css'/>
+    <link rel='stylesheet' type='text/css' href='/static/css/layout.css'/>
+    <link rel='stylesheet' type='text/css' href='/static/css/skeleton.css'/>
+    <link rel='stylesheet' type='text/css' href='/static/css/main.css'/>
     </head>
     <body class='landing'> 
         <div id='main'>
-		  <img src='static/laced_logo.png' />
+		   <img src='static/images/laced_logo.png' />
        <!-- <h1>Laced</h1> -->
 
         {% for message in get_flashed_messages() %}
