--- a/Laced/templates/tradeuplaodform.html
+++ b/Laced/templates/tradeuplaodform.html
@@ -2,14 +2,14 @@
     <head>
         <title>Laced</title>
         <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
-    <link rel='stylesheet' type='text/css' href='static/base.css'/>
-    <link rel='stylesheet' type='text/css' href='static/layout.css'/>
-    <link rel='stylesheet' type='text/css' href='static/skeleton.css'/>
-    <link rel='stylesheet' type='text/css' href='static/main.css'/>
+    <link rel='stylesheet' type='text/css' href='/static/css/base.css'/>
+    <link rel='stylesheet' type='text/css' href='/static/css/layout.css'/>
+    <link rel='stylesheet' type='text/css' href='/static/css/skeleton.css'/>
+    <link rel='stylesheet' type='text/css' href='/static/css/main.css'/>
     </head>
     <body> 
        <header>
-            <h1><img src='static/lacedlogo_1.png' /></h1>
+            <h1><img src='static/images/lacedlogo_1.png' /></h1>
         </header>
         
         <p>Laced is all about Trading in a safe way! Make sure to add size, condition and a brief description along with a good image the better the image, and description the better chance of someone making a offer on the item</p>
