--- a/Laced/templates/closet.html
+++ b/Laced/templates/closet.html
@@ -2,14 +2,13 @@
     <head>
         <title>Laced</title>
         <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
-    <link rel='stylesheet' type='text/css' href='static/base.css'/>
-    <link rel='stylesheet' type='text/css' href='static/layout.css'/>
-    <link rel='stylesheet' type='text/css' href='static/skeleton.css'/>
-    <link rel='stylesheet' type='text/css' href='static/main.css'/>
+    <link rel='stylesheet' type='text/css' href='/static/css/layout.css'/>
+    <link rel='stylesheet' type='text/css' href='/static/css/skeleton.css'/>
+    <link rel='stylesheet' type='text/css' href='/static/css/main.css'/>
     </head>
     <body>
         <header>
-            <h1><img src='static/lacedlogo_1.png' /></h1> 
+            <h1><img src='static/images/lacedlogo_1.png' /></h1>  
             <nav>
                 <a href='/home'>Home</a>
                 <a href='/store'>Shop</a>
@@ -28,7 +27,7 @@
             <br/>
 		  	<div class="row">
 		  		<div class="col col-33 col-offset-33 center">
-		  			<img class="profile_pic" src="static/profile_pic.png" width='200px'/>
+		  			<img class="profile_pic" src="static/images/profile_pic.png" width='200px'/>
 		  		</div>
 		  	</div> <!-- / row -->
 
@@ -94,9 +93,9 @@
 		  	-->
 		  <div class="row">
                  <ul class="photo-grid">
-                     <li><img src="static/4.jpg"></li>
-		  			<li><img src="static/2.jpg"></li>
-		  			<li><img src="static/3.jpg"></li>
+                     <li><img src="static/images/4.jpg"></li>
+		  			<li><img src="static/images/2.jpg"></li>
+		  			<li><img src="static//images/3.jpg"></li>
                 </ul>
 		  	</div>
 		  	
