--- a/Laced/templates/detail.html
+++ b/Laced/templates/detail.html
@@ -2,15 +2,15 @@
     <head>
         <title>Laced</title>
         <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
-    <link rel='stylesheet' type='text/css' href='/static/base.css'/>
-    <link rel='stylesheet' type='text/css' href='/static/layout.css'/>
-    <link rel='stylesheet' type='text/css' href='/static/skeleton.css'/>
-    <link rel='stylesheet' type='text/css' href='/static/main.css'/>
+    <link rel='stylesheet' type='text/css' href='/static/css/base.css'/>
+    <link rel='stylesheet' type='text/css' href='/static/css/layout.css'/>
+    <link rel='stylesheet' type='text/css' href='/static/css/skeleton.css'/>
+    <link rel='stylesheet' type='text/css' href='/static/css/main.css'/>
    
     </head>
     <body> 
       <header>
-            <h1><img src='/static/lacedlogo_1.png' /></h1> 
+            <h1><img src='/static/images/lacedlogo_1.png' /></h1> 
            <nav>
                 <a href='/home'>Home</a>
                 <a href='/store'>Shop</a>
